# spacemines

./: .gitmodules  Cargo.toml  README.md  i18n.toml
.github/workflows/: rust.yml
src/: args.rs  error.rs  field.rs  main.rs  tui.rs
src/field/: mod.rs  tile.rs
src/gui/: about.rs  app.rs  localization.rs  main_view.rs  mod.rs
src/gui/embed/en/: spacemines.ftl
src/tui/: args.rs  mod.rs
src/ui/: mod.rs
