[package]
name = "spacemines"
version = "0.1.0"
edition = "2021"

[dependencies]
backtrace = "0.3.71"
rand = "0.8.5"
itoa = "1.0.11"
atoi = "2.0.0"
clap = { version = "4.5.4", features = ["derive"] }

libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["a11y", "tokio", "wayland", "wgpu"], optional = true}
cosmic-time = { version = "0.2.0", optional = true }
tracing-log = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

[features]
default = ["gui", "tui"]
gui = ["dep:libcosmic", "dep:cosmic-time", "dep:tracing-log", "tracing-subscriber"]
tui = []
