[package]
name = "spacemines"
version = "0.1.0"
edition = "2021"

[dependencies]
backtrace = "0.3.72"
rand = "0.8.5"
itoa = "1.0.11"
atoi = "2.0.0"
clap = { version = "4.5.4", features = ["derive"] }
crc = "3.2.1"
tokio = { version = "1.38.0", features = ["full"], optional = true }

cosmic-time = { version = "0.2.0", optional = true }
tracing-log = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
i18n-embed-fl = { version = "0.8.0", optional = true }
once_cell = { version = "1.19.0", optional = true }
open = { version = "5.1.3", optional = true }
rust-embed = { version = "8.4.0", optional = true }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["a11y", "dbus-config", "tokio", "wayland", "wgpu"]
optional = true

[dependencies.i18n-embed]
version = "0.14.1"
features = ["fluent-system", "desktop-requester"]

[features]
default = ["gui", "tui"]
gui = [
    "dep:i18n-embed-fl",
    "dep:libcosmic",
    "dep:cosmic-time",
    "dep:tracing-log",
    "dep:tracing-subscriber",
    "dep:tokio",
    "dep:once_cell",
    "dep:open",
    "dep:rust-embed",
]
tui = []
